--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "debug": "npm run build:dev && npm start",
     "debug:prod": "npm run build:prod && npm start",
     "deploy": "npm run build:prod && wt create -p node8 --secrets-file .secrets webtask.js",
-    "start": "wt serve webtask.js --hostname localhost --port 7071 --secrets-file .secrets"
+    "start": "wt serve webtask.js --hostname localhost --port 7071 --secrets-file .secrets",
+    "schedule": "wt cron create --schedule \"0 */3 * * *\" -p node8 --secrets-file .secrets webtask.js"
   },
   "author": "Gary Gambill",
   "license": "MIT",
@@ -17,7 +18,6 @@
     "azure-storage": "^2.6.0",
     "babel-runtime": "^6.26.0",
     "moment": "^2.19.1",
-    "node-fetch": "^1.7.3",
     "object.entries": "^1.0.4",
     "sentiment": "^4.1.0",
     "twit": "^2.2.9"
@@ -29,7 +29,6 @@
     "babel-preset-env": "^1.6.1",
     "lodash": "^4.17.4",
     "request-promise": "^4.2.2",
-    "rimraf": "^2.6.2",
     "webpack": "^3.8.1",
     "webpack-node-externals": "^1.6.0",
     "wt-cli": "^8.1.0"
